# libass-android

.github/actions/setup-libraries/: action.yml
.github/workflows/: test.yml
app/src/main/assets/: performance.mkv  test_video.mkv  test_video_flac_with_red_mask.mkv
app/src/main/java/io/github/peerless2012/ass/demo/: MainActivity.kt
lib_ass/: build.gradle.kts
lib_ass/src/main/cpp/: CMakeLists.txt  ass_stub.c  build_libass_android.py
lib_ass/src/main/jni/: Android.mk
lib_ass_kt/: .gitignore  build.gradle.kts
lib_ass_kt/src/main/cpp/: AssKt.c  CMakeLists.txt  build_libass_android.py
lib_ass_kt/src/main/java/io/github/peerless2012/ass/: AssRender.kt
lib_ass_media/src/main/java/io/github/peerless2012/ass/media/executor/: AssExecutor.kt  AssTask.kt
lib_ass_media/src/main/java/io/github/peerless2012/ass/media/parser/: AssSubtitleParser.kt
lib_ass_media/src/main/java/io/github/peerless2012/ass/media/render/: AssCanvasOverlay.kt  AssTexOverlay.kt
